--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lavacharts",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Wrapper library for the Google Chart API",
   "homepage": "http://lavacharts.com",
   "author": "Kevin Hill",
@@ -10,25 +10,33 @@
     "node": "10.*"
   },
   "dependencies": {
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.13.0",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.17"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "async": "^1.4.2",
-    "glob": "^6.0.4",
+    "browserify": "^11.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.0",
     "gulp-jshint": "^1.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-task-loader": "^1.3.1",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
-    "karma-chrome-launcher": "^0.2.2",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.13.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-detect-browsers": "^2.0.2",
     "karma-firefox-launcher": "^0.1.6",
     "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs-prebuilt": "^2.1.4",
     "sh": "^0.0.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "yargs": "^3.6.0"
   },
   "repository": {
@@ -38,7 +46,10 @@
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
+  "config": {
+    "entry": "./javascript/src/lava.entry.js"
+  },
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start javascript/karma/karma.conf.dist.js"
+    "test": "node ./node_modules/karma/bin/karma start ./configs/karma.conf.dist.js"
   }
 }
