--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lavacharts",
-  "version": "3.1.0",
+  "version": "3.0.3",
   "description": "Wrapper library for the Google Chart API",
   "homepage": "http://lavacharts.com",
   "author": "Kevin Hill",
@@ -10,7 +10,10 @@
     "node": "10.*"
   },
   "dependencies": {
-    "underscore": "^1.8.3"
+    "document-ready": "^1.0.0",
+    "lodash": "^4.11.1",
+    "node-custom-errors": "^0.1.6",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "browserify": "^11.1.0",
@@ -19,23 +22,17 @@
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-task-loader": "^1.3.1",
-    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.2.4",
-    "jasmine-core": "^2.2.0",
+    "jasmine-core": "^2.4.1",
+    "jasmine-sinon": "^0.4.0",
+    "jsdoc": "^3.4.0",
+    "jshint-stylish": "^2.1.0",
     "karma": "^0.13.0",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-detect-browsers": "^2.0.2",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs-prebuilt": "^2.1.4",
-    "sh": "^0.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "karma-sinon": "^1.0.4",
+    "sinon": "^1.17.3",
     "watchify": "^3.7.0",
     "yargs": "^3.6.0"
   },
@@ -50,6 +47,7 @@
     "entry": "./javascript/src/lava.entry.js"
   },
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start ./configs/karma.conf.dist.js"
+    "test": "./node_modules/.bin/karma start --singleRun",
+    "jsdoc": "./node_modules/.bin/jsdoc -d build/jsdoc --package package.json javascript/src/lava/Lava.js"
   }
 }
