--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "browserify": "^11.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.0",
+    "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jasmine-core": "^2.4.1",
     "jasmine-sinon": "^0.4.0",
@@ -33,6 +36,8 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
     "sinon": "^1.17.3",
+    "stripify": "^4.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "yargs": "^3.6.0"
   },
