--- a/composer.json
+++ b/composer.json
@@ -87,5 +87,10 @@
         "cs": "phpcs --standard=PSR2 src tests",
         "cbf" : "phpcbf --standard=PSR2 src tests"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.1.x-dev"
+        }
+    },
     "minimum-stability": "stable"
 }
