working on automation testing

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "browserify": "^11.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.0",
+    "gulp-connect-php": "0.0.8",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.10.0",
+    "gulp-phantom": "0.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
