--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.5",
         "satooshi/php-coveralls": "~1.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "5.0.*"
     },
     "autoload-dev": {
         "psr-4": {
