adding twify93 to contributors list. #181

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
             "role": "Creator"
         },
         {
+            "name": "twify93",
+            "homepage": "https://github.com/twify93",
+            "role": "Contributor"
+        },
+        {
             "name": "SendDerek",
             "homepage": "https://github.com/SendDerek",
             "role": "Contributor"
