--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
 branches:
   only:
     - "master"
+    - "3.1"
     - "3.0"
     - "2.5"
 
@@ -44,19 +45,19 @@ before_install:
   - composer selfupdate
   - nvm install 0.12
   - nvm use 0.12
-  - cd javascript && npm config set spin false
+  - $(cd $TRAVIS_BUILD_DIR/javascript && npm config set spin false)
 
 install:
   - composer install --no-progress --no-interaction --prefer-dist
-  - cd javascript && npm install --no-progress
+  - $(cd $TRAVIS_BUILD_DIR/javascript && npm install --no-progress)
 
 before_script:
-  - echo 'date.timezone = "America/Los_Angeles"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - mkdir -p build/logs
+  - echo 'date.timezone = "America/Los_Angeles"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 script:
   - composer run test
-  - cd javascript && npm run test
+  - $(cd $TRAVIS_BUILD_DIR/javascript && npm run test)
 
 after_script:
   - php ./vendor/bin/coveralls
