--- a/composer.json
+++ b/composer.json
@@ -96,6 +96,7 @@
         "test": "phpunit -c phpunit.xml",
         "cs": "phpcs --standard=PSR2 src tests",
         "cbf" : "phpcbf --standard=PSR2 src tests",
+        "lavajs:release" : "gulp --cwd javascript release && git add javascript/dist/lava.js && git commit -m 'Releasing new build of the lava.js module' && git push",
         "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
         "lavajs:push" : "git subtree --prefix=javascript push lavajs master"
     },
