--- a/javascript/package.json
+++ b/javascript/package.json
@@ -14,11 +14,14 @@
     "custom-error-generator": "^7.0.0",
     "document-ready": "^1.0.3",
     "lodash": "^4.17.4",
-    "q": "^1.4.1"
+    "q": "^1.5.0"
   },
   "devDependencies": {
-    "browserify": "^14.0.0",
-    "gulp": "^3.9.0",
+    "@angular/core": "^4.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "gulp": "^3.9.1",
     "gulp-bump": "^0.3.0",
     "gulp-connect-php": "0.0.8",
     "gulp-if": "^2.0.0",
@@ -31,23 +34,22 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "jasmine-core": "^2.4.1",
+    "jasmine-core": "^2.6.4",
     "jasmine-sinon": "^0.4.0",
     "jsdoc": "^3.4.0",
     "jshint-stylish": "^2.1.0",
     "karma": "^0.13.0",
-    "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
     "node-notifier": "^5.1.2",
     "node-resemble-js": "^0.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
+    "rxjs": "^5.1.0",
     "sinon": "^1.17.3",
     "stripify": "^4.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
-    "yargs": "^3.6.0"
+    "yargs": "^3.6.0",
+    "zone.js": "^0.8.12"
   },
   "repository": {
     "type": "git",
