--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "phpunit/phpunit": "~4.8",
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
-        "squizlabs/php_codesniffer": "~2.5",
+        "squizlabs/php_codesniffer": "3.*",
         "satooshi/php-coveralls": "~1.0",
         "codeclimate/php-test-reporter": "~0.3"
     },
