--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~5",
         "justinrainbow/json-schema": "^5.2",
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
@@ -53,11 +53,15 @@
         "test": "phpunit -c phpunit.xml",
         "cs": "phpcs --standard=PSR2 src tests",
         "cbf" : "phpcbf --standard=PSR2 src tests",
-        "version": "php -r \"require(__DIR__.\\\"/src/Lavacharts.php\\\");echo \\Khill\\Lavacharts\\Lavacharts::VERSION;\"",
-        "lavajs:release" : "./node_modules/.bin/gulp --cwd javascript release && git add javascript/dist/lava.js && git commit -m 'Releasing new build of the lava.js module' && git push",
-        "lavajs:gulp" : "./node_modules/.bin/gulp --cwd javascript",
+        "lavajs:release" : "./javascript/node_modules/.bin/gulp --cwd javascript release && git add javascript/dist/lava.js && git commit -m 'Releasing new build of the lava.js module' && git push",
+        "lavajs:gulp" : "./javascript/node_modules/.bin/gulp --cwd javascript",
         "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
         "lavajs:push" : "git subtree --prefix=javascript push lavajs master"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "config": {
+        "platform": {
+            "php": "5.6"
+        }
+    }
 }
