--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ language: php
 sudo: false
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
+  - 7.1
   - hhvm
 
 matrix:
@@ -17,10 +16,9 @@ matrix:
 
 branches:
   only:
-    - "master"
-    - "3.1"
-    - "3.0"
-    - "2.5"
+    - master
+    - 3.1
+    - 3.0
 
 cache:
   directories:
