testing nightmare for rendering automation

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -20,11 +20,10 @@
     "browserify": "^14.4.0",
     "gulp": "^3.9.1",
     "gulp-bump": "^0.3.0",
-    "gulp-connect-php": "0.0.8",
+    "gulp-connect-php": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.10.0",
     "gulp-notify": "^3.0.0",
-    "gulp-phantom": "0.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-spawn": "^0.3.0",
@@ -38,6 +37,7 @@
     "karma": "^0.13.0",
     "karma-jasmine": "^0.3.5",
     "karma-sinon": "^1.0.4",
+    "nightmare": "^2.10.0",
     "node-notifier": "^5.1.2",
     "node-resemble-js": "^0.2.0",
     "rxjs": "^5.1.0",
@@ -56,6 +56,7 @@
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "scripts": {
+    "gulp": "./node_modules/.bin/gulp",
     "test": "./node_modules/.bin/karma start --singleRun",
     "jsdoc": "./node_modules/.bin/jsdoc -d build/jsdoc --package package.json javascript/src/lava/Lava.js"
   }
