Batch static chart generation works!

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -18,6 +18,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-bump": "^0.3.0",
     "gulp-connect-php": "^1.0.1",
