--- a/javascript/package.json
+++ b/javascript/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^4.2.4",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
+    "bluebird": "^3.5.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
     "browserify-versionify": "^1.0.6",
