--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "~5",
+        "phpunit/phpunit": "^5.7",
         "justinrainbow/json-schema": "^5.2",
-        "mybuilder/phpunit-accelerator": "~1.1",
-        "mockery/mockery": "~0.9",
-        "squizlabs/php_codesniffer": "3.*",
-        "satooshi/php-coveralls": "~1.0",
-        "codeclimate/php-test-reporter": "~0.3"
+        "mybuilder/phpunit-accelerator": "^2.0",
+        "mockery/mockery": "^0.9",
+        "squizlabs/php_codesniffer": "^3.0",
+        "satooshi/php-coveralls": "^1.0",
+        "codeclimate/php-test-reporter": "^0.4.4"
     },
     "autoload-dev": {
         "psr-4": {
@@ -53,7 +53,7 @@
         "test": "phpunit -c phpunit.xml",
         "cs": "phpcs --standard=PSR2 src tests",
         "cbf" : "phpcbf --standard=PSR2 src tests",
-        "lavajs:release" : "./javascript/node_modules/.bin/gulp --cwd javascript release && git add javascript/dist/lava.js && git commit -m 'Releasing new build of the lava.js module' && git push",
+        "lavajs:release" : "./javascript/node_modules/.bin/gulp --cwd javascript prod && git add javascript/dist/lava.js && git commit -m 'New build of the lava.js module' && git push",
         "lavajs:gulp" : "./javascript/node_modules/.bin/gulp --cwd javascript",
         "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
         "lavajs:push" : "git subtree --prefix=javascript push lavajs master"
