--- a/javascript/package.json
+++ b/javascript/package.json
@@ -10,28 +10,33 @@
     "node": "0.12.*"
   },
   "dependencies": {
-    "babel-register": "^6.24.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@angular/core": "^4.2.4",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
     "bluebird": "^3.5.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
+    "browserify-replace": "^0.9.0",
     "browserify-versionify": "^1.0.6",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-bump": "^0.3.0",
     "gulp-connect-php": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^1.10.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
+    "gulp-replace": "^0.6.1",
     "gulp-spawn": "^0.3.0",
     "gulp-streamify": "^1.0.2",
+    "gulp-tap": "^1.0.1",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.8",
     "jasmine-core": "^2.6.4",
