--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "lavajs:release" : "./javascript/node_modules/.bin/gulp --cwd javascript prod && git add javascript/dist/lava.js && git commit -m 'New build of the lava.js module' && git push",
         "lavajs:gulp" : "./javascript/node_modules/.bin/gulp --cwd javascript",
         "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
-        "lavajs:push" : "git subtree --prefix=javascript push lavajs master"
+        "lavajs:push" : "git subtree --prefix=javascript --rejoin push lavajs master"
     },
     "minimum-stability": "stable",
     "config": {
