--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,16 @@
         "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
         "lavajs:push" : "git subtree --prefix=javascript push lavajs master"
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Khill\\Lavacharts\\Laravel\\LavachartsServiceProvider"
+            ],
+            "aliases": {
+                "Lava": "Khill\\Lavacharts\\Laravel\\LavachartsFacade"
+            }
+        }
+    },
     "config": {
         "platform": {
             "php": "5.4"
