--- a/composer.json
+++ b/composer.json
@@ -1,63 +1,66 @@
 {
-    "name": "khill/lavacharts",
-    "description": "PHP wrapper library for the Google Chart API",
-    "keywords": [
-        "charts",
-        "graphs",
-        "google",
-        "laravel",
-        "symfony",
-        "angular"
-    ],
-    "homepage": "http://lavacharts.com",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kevin Hill",
-            "email": "kevinkhill@gmail.com",
-            "role": "Creator"
-        }
-    ],
-    "support": {
-        "docs": "http://lavacharts.com",
-        "email": "kevinkhill@gmail.com",
-        "forum": "https://gitter.im/kevinkhill/lavacharts",
-        "wiki": "https://github.com/kevinkhill/lavacharts/wiki",
-        "source": "https://github.com/kevinkhill/lavacharts",
-        "issues": "https://github.com/kevinkhill/lavacharts/issues"
+  "name": "khill/lavacharts",
+  "description": "PHP wrapper library for the Google Chart API",
+  "keywords": [
+    "charts",
+    "graphs",
+    "google",
+    "laravel",
+    "symfony",
+    "angular"
+  ],
+  "homepage": "http://lavacharts.com",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Kevin Hill",
+      "email": "kevinkhill@gmail.com",
+      "role": "Creator"
+    }
+  ],
+  "support": {
+    "docs": "http://lavacharts.com",
+    "email": "kevinkhill@gmail.com",
+    "forum": "https://gitter.im/kevinkhill/lavacharts",
+    "wiki": "https://github.com/kevinkhill/lavacharts/wiki",
+    "source": "https://github.com/kevinkhill/lavacharts",
+    "issues": "https://github.com/kevinkhill/lavacharts/issues"
+  },
+  "require": {
+    "php": ">=5.6.0",
+    "nesbot/carbon": "~1.14"
+  },
+  "autoload": {
+    "psr-4": {
+      "Khill\\Lavacharts\\": "src/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7",
+    "justinrainbow/json-schema": "^5.2",
+    "mockery/mockery": "^0.9",
+    "squizlabs/php_codesniffer": "^3.0",
+    "satooshi/php-coveralls": "^1.0",
+    "codeclimate/php-test-reporter": "^0.4.4"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Khill\\Lavacharts\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit -c phpunit.xml",
+    "cs": "phpcs --standard=PSR2 src tests",
+    "cbf": "phpcbf --standard=PSR2 src tests",
+    "lavajs:release": "./javascript/node_modules/.bin/gulp --cwd javascript prod && git add javascript/dist/lava.js && git commit -m 'New build of the lava.js module' && git push",
+    "lavajs:gulp": "./javascript/node_modules/.bin/gulp --cwd javascript",
+    "lavajs:pull": "git subtree --prefix=javascript pull lavajs master",
+    "lavajs:push": "git subtree --prefix=javascript --rejoin push lavajs master"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "4.x-dev"
     },
-    "require": {
-        "php": ">=5.6.0",
-        "nesbot/carbon": "~1.14"
-    },
-    "autoload": {
-        "psr-4": {
-            "Khill\\Lavacharts\\": "src/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "justinrainbow/json-schema": "^5.2",
-        "mockery/mockery": "^0.9",
-        "squizlabs/php_codesniffer": "^3.0",
-        "satooshi/php-coveralls": "^1.0",
-        "codeclimate/php-test-reporter": "^0.4.4"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Khill\\Lavacharts\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "test": "phpunit -c phpunit.xml",
-        "cs": "phpcs --standard=PSR2 src tests",
-        "cbf" : "phpcbf --standard=PSR2 src tests",
-        "lavajs:release" : "./javascript/node_modules/.bin/gulp --cwd javascript prod && git add javascript/dist/lava.js && git commit -m 'New build of the lava.js module' && git push",
-        "lavajs:gulp" : "./javascript/node_modules/.bin/gulp --cwd javascript",
-        "lavajs:pull" : "git subtree --prefix=javascript pull lavajs master",
-        "lavajs:push" : "git subtree --prefix=javascript --rejoin push lavajs master"
-    },
-    "extra": {
     "laravel": {
       "providers": [
         "Khill\\Lavacharts\\Laravel\\LavachartsServiceProvider"
@@ -67,10 +70,10 @@
       }
     }
   },
-    "minimum-stability": "stable",
-    "config": {
-        "platform": {
-            "php": "5.6"
-        }
+  "minimum-stability": "stable",
+  "config": {
+    "platform": {
+      "php": "5.6"
     }
+  }
 }
