--- a/.travis.yml
+++ b/.travis.yml
@@ -7,20 +7,22 @@ php:
   - 5.5
   - 5.6
   - 7.0
-  - hhvm
+  - 7.1
+  - 7.2
+  - 7.3
 
 matrix:
   fast_finish: true
   allow_failures:
     - php: 7.0
-    - php: hhvm
+    - php: 7.1
+    - php: 7.2
+    - php: 7.3
 
 branches:
   only:
     - "master"
     - "3.1"
-    - "3.0"
-    - "2.5"
 
 cache:
   directories:
