--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "issues": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "require": {
-    "php": ">=5.6.0",
-    "nesbot/carbon": "~1.14"
+    "php": ">=7",
+    "nesbot/carbon": "*"
   },
   "autoload": {
     "psr-4": {
@@ -41,7 +41,8 @@
     "mockery/mockery": "^0.9",
     "squizlabs/php_codesniffer": "^3.0",
     "satooshi/php-coveralls": "^1.0",
-    "codeclimate/php-test-reporter": "^0.4.4"
+    "codeclimate/php-test-reporter": "^0.4.4",
+    "phpstan/phpstan": "^0.12.42"
   },
   "autoload-dev": {
     "psr-4": {
