--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,14 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^8",
     "justinrainbow/json-schema": "^5.2",
-    "mockery/mockery": "^0.9",
+    "mockery/mockery": "*",
     "squizlabs/php_codesniffer": "^3.0",
-    "satooshi/php-coveralls": "^1.0",
-    "codeclimate/php-test-reporter": "^0.4.4",
-    "phpstan/phpstan": "^0.12.42"
+    "php-coveralls/php-coveralls": "*",
+    "codeclimate/php-test-reporter": "*",
+    "phpstan/phpstan": "^0.12.42",
+    "vimeo/psalm": "^3.15"
   },
   "autoload-dev": {
     "psr-4": {
@@ -52,11 +53,7 @@
   "scripts": {
     "test": "phpunit -c phpunit.xml",
     "cs": "phpcs --standard=PSR2 src tests",
-    "cbf": "phpcbf --standard=PSR2 src tests",
-    "lavajs:release": "./javascript/node_modules/.bin/gulp --cwd javascript prod && git add javascript/dist/lava.js && git commit -m 'New build of the lava.js module' && git push",
-    "lavajs:gulp": "./javascript/node_modules/.bin/gulp --cwd javascript",
-    "lavajs:pull": "git subtree --prefix=javascript pull lavajs master",
-    "lavajs:push": "git subtree --prefix=javascript --rejoin push lavajs master"
+    "cbf": "phpcbf --standard=PSR2 src tests"
   },
   "extra": {
     "branch-alias": {
@@ -71,10 +68,5 @@
       }
     }
   },
-  "minimum-stability": "stable",
-  "config": {
-    "platform": {
-      "php": "5.6"
-    }
-  }
+  "minimum-stability": "stable"
 }
