--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
     "issues": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "require": {
-    "php": ">=7",
-    "nesbot/carbon": "*"
+    "php": ">=7.1",
+    "ext-json": "*",
+    "nesbot/carbon": "^2"
   },
   "autoload": {
     "psr-4": {
@@ -36,11 +37,12 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^8",
+    "phpunit/phpunit": "^9.3",
     "justinrainbow/json-schema": "^5.2",
     "mockery/mockery": "*",
-    "squizlabs/php_codesniffer": "^3.0",
     "php-coveralls/php-coveralls": "*",
+    "friendsofphp/php-cs-fixer": "^2",
+    "squizlabs/php_codesniffer": "^3.5",
     "codeclimate/php-test-reporter": "*",
     "phpstan/phpstan": "^0.12.42",
     "vimeo/psalm": "^3.15"
@@ -56,9 +58,6 @@
     "cbf": "phpcbf --standard=PSR2 src tests"
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "4.x-dev"
-    },
     "laravel": {
       "providers": [
         "Khill\\Lavacharts\\Laravel\\LavachartsServiceProvider"
